fix filter not found